# fusil

./: .git-blame-ignore-revs  .gitignore  AUTHORS  CLAUDE.md  CONTRIBUTING.md  ChangeLog  INSTALL  MANIFEST.in  PKG-INFO  README  README.rst  README.windows.txt  README_JIT.md  TECH_DEBT_PLAN.md  jit_config.py  pyproject.toml  setup.py  test_doc.py
.github/workflows/: ci.yml
config/: fusil_blacklist.toml
doc/: code-review-findings.md  complexity-reduction-report.md  configuration.rst  file_watch.rst  howto_write_fuzzer.rst  index.rst  jit-decision-memo.md  jit-seed-generation.md  mas-architecture.md  oom-dedup-plan.md  oom-fuzzing.md  oom-sequences.md  plugins.md  process.rst  python-fuzzer.md  reproducer-techniques-for-fusil.md  tsan-mode-plan.md
doc/legacy/: README.md  TODO
examples/: good-bye-world
fleet/: README.md  fleet  fleet-run  fleet.conf  fusil@.service.in
fusil/: aggressivity.py  application.py  application_logger.py  auto_mangle.py  bits.py  blacklist_config.py  bytes_generator.py  c_tools.py  cmd_help_parser.py  config.py  directory.py  dummy_mangle.py  error.py  file_tools.py  file_watch.py  filter_manager.py  fixpng.py  incr_mangle.py  incr_mangle_op.py  mangle.py  mangle_agent.py  mangle_op.py  mockup.py  plugin_manager.py  project.py  project_agent.py  project_directory.py  python_tools.py  score.py  session.py  session_agent.py  session_directory.py  six.py  system_calm.py  terminal_echo.py  time_watch.py  tools.py  unicode_generator.py  unsafe.py  version.py  (+4 more)
fusil/linux/: cpu_load.py  syslog.py
fusil/mas/: agent.py  agent_id.py  agent_list.py  application_agent.py  mailbox.py  message.py  mta.py  univers.py
fusil/network/: client.py  http_request.py  http_server.py  server.py  server_client.py  tcp_client.py  tcp_server.py  tools.py  unix_client.py
fusil/notworking/: __init__.py  auto_mangle.py  c_tools.py  dummy_mangle.py  fixpng.py  incr_mangle.py  incr_mangle_op.py  mangle.py  (+3 more)
fuzzers/: fusil-firefox  fusil-gettext  fusil-gimp  fusil-libc-printf  fusil-php  fusil-python  fusil-python-threaded  fusil-vlc  fusil-wizzard  fusil-zzuf
tests/: file_watch_ignore.rst  file_watch_read.rst  mas_harness.py  test_agent_list.py  test_application.py  test_application_logger.py  test_cereggii_plugin.py  test_config.py  test_core_logic.py  test_cpu_load.py  test_cpu_probe.py  test_directory.py  test_dummy_plugin.py  test_file_tools.py  test_file_watch.py  test_filter_manager.py  test_generators.py  test_mas.py  test_mas_more.py  test_mta.py  test_plugin_manager.py  test_plugin_manager_more.py  test_process_cmdline.py  test_process_create.py  test_process_env.py  test_process_prepare.py  test_process_stdout.py  test_process_tools.py  test_process_watch.py  test_project.py  test_project_directory.py  test_replay_python.py  test_session_agent.py  test_session_directory.py  test_session_directory_more.py  test_session_lifecycle.py  test_system_calm.py  test_unsafe.py  test_write_code.py
tools/: jit_coverage_parser.py  state_tool.py
(+143 files in other folders)
