[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fusil"
description = "Fuzzing framework"
authors = [
    {name = "Victor Stinner", email = "victor.stinner@haypocalc.com"},
]
maintainers = [
    {name = "Daniel Diniz", email = "lafleurfuzzer@gmail.com"},
]
requires-python = ">=3.13"
license = {text = "GNU GPL v2"}
keywords = ["fuzzing", "fuzzer", "security", "testing"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "python-ptrace>=0.7",
]
dynamic = ["version", "readme"]

# Optional features used by the Python fuzzer when present (see fusil.python).
[project.optional-dependencies]
numpy = ["numpy"]
h5py = ["h5py"]

[project.urls]
Homepage = "https://github.com/devdanzin/fusil"
Repository = "https://github.com/devdanzin/fusil"

# Only the actively-maintained Python fuzzer is exposed as a console script.
# The legacy fuzzers/fusil-* scripts remain runnable from a checkout via
# PYTHONPATH=$PWD ./fuzzers/<name>.
[project.scripts]
fusil-python-threaded = "fusil.python:main"

[tool.setuptools.dynamic]
version = {attr = "fusil.version.VERSION"}
readme = {file = ["README.rst", "ChangeLog"], content-type = "text/x-rst"}

# Auto-discover all fusil packages (this also picks up fusil.python.h5py, which
# the old hand-maintained setup.py package list omitted).
[tool.setuptools.packages.find]
where = ["."]
include = ["fusil*"]
namespaces = false

[tool.ruff]
line-length = 100
target-version = "py313"
# Legacy / parked code is not maintained to the lint/format standard.
extend-exclude = ["fusil/notworking", "fuzzers/notworking", "tools/notworking"]

[tool.ruff.lint]
# Default rule set (pyflakes F + a subset of pycodestyle E) plus import sorting (I).
select = ["E4", "E7", "E9", "F", "I"]
# fusil legitimately does conditional/late imports (optional-feature detection) and the
# tests set up sys.path before importing fusil, so E402 (import-not-at-top) is expected.
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
# The code generators build target source as long string literals (E501) and accumulate
# scratch locals while emitting code (F841); the samples are deliberately-weird fixtures.
"fusil/python/write_python_code.py" = ["E501"]
"fusil/python/jit/*" = ["E501", "F841"]
"fusil/python/h5py/*" = ["E501", "F841"]
"fusil/python/samples/*" = ["E731", "E722"]
# These imports exist to assert the tricky sample objects are importable.
"tests/python/samples/test_tricky_objects.py" = ["F401"]
